put back the spatial data structures for lightweight rendering and improved RTree visualization